--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "extern/CommonLibSSE"]
 	path = extern/CommonLibSSE
-	url = https://github.com/Ryan-rsm-McKenzie/CommonLibSSE
+	url = https://github.com/powerof3/CommonLibSSE.git
+	branch = dev
